cleanup of some signatures.

--- a/jsidplay2/src/libsidutils/sidid.cfg
+++ b/jsidplay2/src/libsidutils/sidid.cfg
@@ -161,13 +161,13 @@ Pretzel/C64Composer
 AD FE 03 99 04 D4 60 A9 1F 8D 18 D4 AD END
 
 Cadaver_Musicdriver_7
-A9 ?? F0 ?? 10 ?? 60 85 ?? 0A 65 ?? E9 02 85 ?? AND A2 14 9D ?? ?? 9D 00 D4 CA 10 F7 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D 15 D4 END
+A9 ?? F0 ?? 10 ?? 60 85 ?? 0A 65 ?? E9 02 85 AND A2 14 9D ?? ?? 9D 00 D4 CA 10 F7 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D 15 D4 END
 
 Cadaver_Musicdriver_10
 DE ?? ?? D0 03 FE ?? ?? B9 ?? ?? A8 0A 85 ?? 98 30 0F BD ?? ?? 18 65 ?? 9D ?? ?? 90 03 FE ?? ?? 60 BD ?? ?? 38 E5 ?? 9D ?? ?? B0 03 DE ?? ?? 60 END
 
 Censor_Digi_1
-8D 18 D4 A9 ?? 8D ?? ?? AND AD 0D DD 68 40 AND C5 ?? F0 ?? AD ?? ?? 4A 4A 4A 4A END
+8D 18 D4 A9 ?? 8D AND AD 0D DD 68 40 AND C5 ?? F0 ?? AD ?? ?? 4A 4A 4A 4A END
 4A 4A 4A 4A 8D 18 D4 E6 0A D0 02 E6 0B END
 
 Censor_Digi_2
@@ -191,6 +191,9 @@ Chris_Huelsbeck
 
 Chris_Walsh
 E9 00 8D ?? ?? AD ?? ?? 8D 0E D4 AD ?? ?? 8D 0F D4 CE ?? ?? AD ?? ?? C9 00 F0 1A AD ?? ?? 18 6D ?? ?? 8D ?? ?? 8D 10 D4 AD ?? ?? 6D ?? ?? 8D ?? ?? 8D 11 D4 60 A0 00 A9 10 8D 12 D4 B1 ?? C9 FF END
+
+Christoph_Bergmann
+AE ?? ?? BD ?? ?? 29 FE 9D ?? ?? AE ?? ?? 9D 04 D4 60 END
 
 ChristopherJam
 A2 0E BD ?? ?? 8D ?? ?? 6C ?? ?? 9D ?? ?? DE ?? ?? D0 05 DE ?? ?? F0 43 18 BD ?? ?? 69 03 29 3F 9D END
@@ -216,9 +219,6 @@ B1 13 A0 36 84 01 85 17 4A 4A 4A 4A 8D 18 D4 A9 CD 8D 18 03 A4 11 AD 0D DD A5 10
 Comer/Sample_Studio
 A0 00 A2 30 86 01 B1 02 A2 37 86 01 85 ?? 4A 4A 4A 4A 8D 18 D4 A2 ?? CA D0 FD A5 END
 
-Computer_Hitware
-C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
-
 CRD_Tracker
 C0 80 D0 04 85 57 A9 00 85 26 E8 86 5E 88 84 65 18 A5 57 65 26 8D 16 D4 85 57 A2 00 20 END
 
@@ -231,7 +231,7 @@ D0 D0 FB 88 CA D0 F7 A9 41 8D 04 D4 A0 B1 88 D0 END
 
 Cyberlogic_SoundStudio
 A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 AND 8D ?? ?? 60 A2 00 A8 ?? ?? ?? ?? ?? 9D ?? ?? ?? ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 98 18 69 ?? E8 E0 03 90 D5 60 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 8D ?? ?? 60 AND 9D ?? ?? A9 00 9D ?? ?? A9 ?? 9D ?? ?? AND 4C ?? ?? CE ?? ?? AC ?? ?? 4C ?? ?? AD ?? ?? D0 DE AND A5 39 48 A5 3A 48 AD ?? ?? 10 END
+A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 8D ?? ?? 60 AND 9D ?? ?? A9 00 9D ?? ?? A9 ?? 9D AND 4C ?? ?? CE ?? ?? AC ?? ?? 4C ?? ?? AD ?? ?? D0 DE AND A5 39 48 A5 3A 48 AD ?? ?? 10 END
 A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 60 8D ?? ?? 60 A8 A2 00 98 48 B9 ?? ?? C9 40 B0 20 9D ?? ?? B9 ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? BC ?? ?? 99 04 D4 68 18 END
 A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 60 8D ?? ?? 60 A2 00 A8 B9 ?? ?? C9 40 B0 1C 9D ?? ?? B9 ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 98 18 69 ?? E8 E0 03 90 END
 A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 8D ?? ?? 60 A2 00 18 A8 ?? ?? ?? 30 21 9D ?? ?? ?? ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? A9 ?? 9D ?? ?? 98 69 ?? E8 E0 END
@@ -278,7 +278,7 @@ David_Green
 
 David_Thielat/Epyx
 C9 ?? 90 01 60 8E ?? ?? 8C ?? ?? A0 00 8C ?? ?? 0A AA BD ?? ?? 85 ?? BD ?? ?? 85 ?? B1 ?? 0A 0A 0A 0A 0A A8 20 ?? ?? A2 00 A1 ?? 99 ?? ?? 20 ?? ?? A5 ?? 99 ?? ?? A5 ?? 99 ?? ?? A9 01 99 ?? ?? A2 END
-A9 00 91 ?? C8 C0 20 D0 F9 A0 03 A9 02 91 ?? A0 0C A9 01 91 ?? AND 85 ?? AND 85 ?? 60 27 48 29 0F 85 ?? A9 ?? 38 E5 ?? AA 68 29 F0 4A 4A 4A END
+A9 00 91 ?? C8 C0 20 D0 F9 A0 03 A9 02 91 ?? A0 0C A9 01 91 AND 85 AND 85 ?? 60 27 48 29 0F 85 ?? A9 ?? 38 E5 ?? AA 68 29 F0 4A 4A 4A END
 
 David_Whittaker
 CE ?? ?? 8E 04 D4 E8 8E 04 D4 END
@@ -468,9 +468,10 @@ A9 ?? 29 7F F0 79 0A 0A A8 A9 02 D0 25 A9 02 8D ?? ?? A9 B0 8D ?? ?? B0 19 A2 ??
 8D ?? ?? AA CA 8E ?? ?? A9 ?? 8D ?? ?? 85 FB A9 ?? 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 ?? A8 09 ?? 8D 18 D4 A9 ?? F0 1B 88 C0 10 90 09 8E ?? ?? C9 80 B0 DA 90 0D CE ?? ?? 10 08 29 7F 8D END
 90 0A 18 79 ?? ?? C9 ?? 90 1F B0 08 38 F9 ?? ?? C9 ?? B0 15 BE ?? ?? 10 03 CE ?? ?? CE ?? ?? D0 03 8E ?? ?? A2 90 8E ?? ?? 8D ?? ?? 8D 16 D4 A9 ?? 09 F0 8D 17 D4 A9 ?? 09 ?? 8D END
 C9 80 29 20 F0 ?? 90 02 A9 01 AND 99 06 D4 A9 0F 99 05 D4 A9 FE 9D ?? ?? BD ?? ?? 30 07 0A 0A 0A 0A 9D ?? ?? A9 FF 9D END
-8D 16 D4 A9 ?? 09 ?? 8D 17 D4 A9 ?? 09 ?? 8D 18 D4 AD ?? ?? F0 ?? CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? AND A9 ?? 30 15 A8 B9 END
+8D 16 D4 A9 ?? 09 ?? 8D 17 D4 A9 ?? 09 ?? 8D 18 D4 AD ?? ?? F0 ?? CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE AND A9 ?? 30 15 A8 B9 END
 9D ?? ?? A8 B9 ?? ?? 9D ?? ?? BD ?? ?? D0 03 4C ?? ?? 9D ?? ?? BC ?? ?? BD ?? ?? C9 01 B9 ?? ?? 90 05 29 0F 1D ?? ?? 85 FF 29 F0 9D ?? ?? 09 0F 9D 06 D4 BD ?? ?? 3D ?? ?? 9D 04 D4 B9 ?? ?? 9D END
 D0 03 BD ?? ?? AA 0A 0A 0A 0A 8D ?? ?? 8A 29 F0 8D ?? ?? B9 ?? ?? 8D ?? ?? B9 ?? ?? D0 06 AD END
+BD ?? ?? B0 ?? 30 07 0A 0A 0A 0A 9D ?? ?? A9 FF 9D ?? ?? 9D ?? ?? BC ?? ?? B9 ?? ?? 0A 30 19 29 END
 
 Geir_Tjelta_digi_1
 8D 18 D4 4C ?? ?? 24 ?? 30 ?? 4A 4A 4A 4A 4C END
@@ -714,7 +715,7 @@ JCH_Protracker
 8D ?? ?? AD ?? ?? 8D 18 D4 60 A2 02 BD ?? ?? C9 02 D0 2C BC ?? ?? B9 ?? ?? BC ?? ?? 99 05 D4 BC ?? ?? B9 ?? ?? BC ?? ?? 99 06 D4 AD ?? ?? F0 09 AD ?? ?? 99 04 D4 END
 
 Jeff
-A5 ?? 48 A5 ?? 48 AND A2 ?? 20 ?? ?? AND A2 07 20 ?? ?? AND A2 ?? 20 ?? ?? 68 85 ?? 68 85 ?? 60 END
+A5 ?? 48 A5 ?? 48 AND A2 ?? 20 AND A2 07 20 AND A2 ?? 20 ?? ?? 68 85 ?? 68 85 ?? 60 END
 60 A5 ?? 48 A5 ?? 48 AND 20 ?? ?? 20 ?? ?? 20 ?? ?? 68 85 ?? 68 85 ?? 60 AD END
 BD ?? ?? 9D 00 D4 BD ?? ?? 18 7D ?? ?? 9D 01 D4 END
 4C ?? ?? AC ?? ?? B9 ?? ?? A8 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D 17 D4 B9 ?? ?? 8D 18 D4 A9 ?? 9D ?? ?? A9 00 9D 04 D4 9D 05 D4 9D 06 D4 9D ?? ?? 9D END
@@ -752,7 +753,7 @@ John_Player
 A9 00 A2 0C 95 ?? 9D 00 D4 9D 0B D4 CA 10 F5 END
 
 Jon_Dunn&Paul_Hughes
-AD ?? ?? F0 01 60 A9 ?? AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 ?? AND 4C ?? ?? 20 END
+AD ?? ?? F0 01 60 A9 AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 AND 4C ?? ?? 20 END
 BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
 F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
 
@@ -805,6 +806,9 @@ CE ?? ?? 10 05 A9 ?? 8D ?? ?? A2 00 20 ?? ?? A2 ?? 20 ?? ?? A2 ?? 20 ?? ?? A9 ??
 A0 00 F0 01 60 A9 ?? 8D ?? ?? A2 00 CE ?? ?? 10 05 A9 ?? 8D ?? ?? 4E ?? ?? B0 07 29 00 9D 04 D4 F0 03 20 ?? ?? 8A 18 69 07 AA C9 15 90 E8 A9 ?? 09 ?? 8D 18 D4 END
 (Parsec)
 9D ?? ?? 9D ?? ?? 9D ?? ?? CA 10 E5 A9 ?? 8D ?? ?? A9 01 8D ?? ?? A2 18 A9 00 9D 00 D4 CA 10 FA 60 A9 ?? 8D 18 D4 A2 02 8E ?? ?? CE ?? ?? 10 06 END
+
+MacMusic
+C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
 
 Madhacker_Digi
 19 03 A9 00 8D 0E DD 8D 05 DD A9 ?? 8D 04 DD A9 81 8D 0D DD A9 01 8D 0E DD AND A6 ?? E6 01 BD 00 ?? C6 01 4A 4A 4A 4A 8D 18 D4 E8 86 END
@@ -904,6 +908,9 @@ BD ?? ?? C9 00 F0 1D DE ?? ?? A9 ?? 9D 04 D4 BD ?? ?? 18 49 FF 18 69 0E 9D 01 D4
 A9 00 9D 04 D4 9D 05 D4 9D 06 D4 AD ?? ?? A8 B9 ?? ?? 9D 00 D4 B9 ?? ?? 9D 01 D4 AD ?? ?? 9D 05 D4 A9 ?? 9D 06 D4 A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 60 AD END
 BD ?? ?? C9 00 F0 1D DE ?? ?? A9 ?? 9D 04 D4 BD ?? ?? 18 49 FF 18 69 0E 9D 01 D4 A9 ?? 9D 00 D4 18 6C ?? ?? 20 ?? ?? BD ?? ?? 9D 01 D4 A9 00 9D 00 D4 A9 11 9D 04 D4 18 6C ?? ?? BD ?? ?? C9 00 END
 
+MicroRhythm
+B1 FB 29 0F 8D 18 D4 AE ?? ?? CA D0 FD B1 FB 4A END
+
 Microtracker
 A0 18 A9 00 99 00 D4 88 10 FA A0 0E A2 02 BD ?? ?? 99 03 D4 BD ?? ?? 99 04 D4 A9 00 99 05 D4 A9 01 95 3C BD ?? ?? 95 30 BD ?? ?? 95 33 BD ?? ?? 9D 16 D4 98 38 E9 07 A8 CA 10 D3 60 END
 
@@ -912,7 +919,7 @@ Micropearl/Fitzpatrick
 4C ?? ?? A8 4A 4A 4A 4A 29 07 AA BD ?? ?? 8D ?? ?? 18 90 00 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 4C ?? ?? 98 29 0F AE ?? ?? BC END
 
 Mike/LSD
-8D ?? ?? B9 ?? ?? 8D 17 D4 B9 ?? ?? 8D ?? ?? 8D 16 D4 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A2 ?? AND 90 08 F0 06 8D ?? ?? 8D 16 D4 CE ?? ?? D0 ?? C8 4C END
+8D ?? ?? B9 ?? ?? 8D 17 D4 B9 ?? ?? 8D ?? ?? 8D 16 D4 B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A2 AND 90 08 F0 06 8D ?? ?? 8D 16 D4 CE ?? ?? D0 ?? C8 4C END
 
 MiniMusic/Gentlemen
 0A A8 B1 F8 48 C8 B1 F8 9D END
@@ -927,7 +934,7 @@ B9 ?? ?? 29 F0 4A 85 ?? BD ?? ?? D0 21 B9 ?? ?? 29 0F 85 ?? BD ?? ?? 18 65 ?? 9D
 AD ?? ?? 8D 17 D4 AD ?? ?? 8D 16 D4 AD ?? ?? F0 13 CE ?? ?? 10 0E AD ?? ?? F0 09 AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 0D ?? ?? 8D 18 D4 AD END
 68 29 20 F0 12 20 ?? ?? FE ?? ?? BC ?? ?? A5 ?? 29 40 D0 19 4C ?? ?? A5 ?? 29 80 F0 0F BC ?? ?? C8 B1 ?? 0A 0A 9D ?? ?? 0A 9D END
 DE ?? ?? 4C ?? ?? 8E ?? ?? BD ?? ?? BC ?? ?? AA A9 00 9D 04 D4 9D 05 D4 9D 06 D4 B9 ?? ?? 9D 05 D4 B9 ?? ?? 9D 06 D4 AE ?? ?? A9 01 9D ?? ?? 9D END
-BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 BD ?? ?? 30 03 FE ?? ?? CA 30 03 4C ?? ?? AND AD ?? ?? 09 ?? 8D 18 D4 60 END
+BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 BD ?? ?? 30 03 FE ?? ?? CA 30 03 4C AND AD ?? ?? 09 ?? 8D 18 D4 60 END
 BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 3D ?? ?? 99 04 D4 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 BD 3D 70 30 03 FE ?? ?? CA 30 03 4C END
 4C ?? ?? ?? 4C ?? ?? C9 ?? D0 01 60 C9 ?? D0 09 C8 B1 ?? 8D 18 D4 4C ?? ?? C9 ?? D0 09 C8 B1 ?? 8D 17 D4 4C ?? ?? C9 ?? D0 1E C8 B1 ?? 8D 16 D4 END
 
@@ -1053,7 +1060,7 @@ Paul_Butler
 A8 BD ?? ?? 99 00 D4 E8 C8 C6 ?? 10 END
 
 Paul_Norman/Cosmi
-C8 D0 02 E6 ?? B1 ?? AND 8D 00 D4 AND C8 D0 02 E6 ?? B1 AND 8D 08 D4 END
+C8 D0 02 E6 ?? B1 AND 8D 00 D4 AND C8 D0 02 E6 ?? B1 AND 8D 08 D4 END
 
 Peter_Liepa
 49 07 69 04 0A 0A 0A 0A 8D 06 D4 A9 11 8D 04 D4 8D 0B D4 AD ?? ?? 18 69 01 29 A7 8D END
@@ -1209,7 +1216,7 @@ Sonic_Graffiti
 9D ?? ?? BC ?? ?? A9 00 99 05 D4 99 06 D4 4C ?? ?? A9 00 9D ?? ?? 9D ?? ?? 4C ?? ?? BC ?? ?? A9 00 99 05 D4 99 06 D4 4C ?? ?? AE ?? ?? BD ?? ?? DD ?? ?? F0 DC BD END
 
 Sorex_Digi
-B1 ?? C6 01 AND 8D 18 D4 ?? ?? CA D0 FD AND E6 ?? A5 ?? AND D0 E7 END
+B1 ?? C6 01 AND 8D 18 D4 ?? ?? CA D0 FD AND E6 ?? A5 AND D0 E7 END
 
 Sosperec
 4C ?? ?? 8E ?? ?? BD ?? ?? 8D ?? ?? A9 80 8D ?? ?? A2 0F 8E ?? ?? ?? ?? ?? CA 20 ?? ?? A2 07 20 ?? ?? A2 00 8E ?? ?? 86 ?? 86 ?? 8E ?? ?? 8E 17 D4 8E 16 D4 A9 00 18 7D ?? ?? A8 B9 ?? ?? 9D END
@@ -1261,9 +1268,9 @@ AA BD ?? ?? 8D 04 DD BD ?? ?? 8D 05 DD BD ?? ?? 8D ?? ?? A9 00 85 ?? BD ?? ?? 85
 8D 72 CE 60 A0 17 A9 00 99 00 D4 99 5A CE 99 73 AND BD 00 9C 20 60 CC BD 00 9D END
 (MusicMaster_TMM)
 8D 0C CE 8D FF ?? 60 A0 17 A9 00 99 00 D4 99 F4 END
-(Chris_Huelsbeck_Digi_V1)
+(Huelsbeck_Digi_V1)
 A0 ?? A5 ?? CD ?? ?? F0 ?? B1 ?? 8D ?? ?? 29 0F END
-(Chris_Huelsbeck_Digi_V2)
+(Huelsbeck_Digi_V2)
 A0 ?? A5 ?? C5 ?? F0 ?? B1 ?? 85 ?? 29 0F 4A 18 69 ?? 8D 18 D4 A5 ?? D0 END
 
 SoundWriter_2.0
@@ -1344,8 +1351,7 @@ TheTracker/Hitmen
 BD 8B 62 85 03 BD 0A 62 85 02 AE 00 71 BD END
 
 Toaster_Digi
-78 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 8D 05 D4 8D 0C D4 8D 13 D4 A9 F0 8D 06 D4 8D 0D D4 8D 14 D4 A9 41 8D 04 D4 8D 0B D4 8D 12 D4 A9 FF 8D 04 DD AND
-A0 00 C6 01 B1 02 E6 01 4A 4A 4A AND 4A 8D 18 D4 END
+78 A9 00 8D 04 D4 8D 0B D4 8D 12 D4 8D 05 D4 8D 0C D4 8D 13 D4 A9 F0 8D 06 D4 END
 
 Tom_Snyder
 4A 4A 4A 4A A8 B9 ?? ?? 95 ?? BD ?? ?? 18 75 ?? 4A A8 B9 ?? ?? B0 04 4A 4A 4A 4A 29 0F 18 7D END
@@ -1373,7 +1379,7 @@ Tim_Gibson
 
 Tiny/Sound_Images
 A9 00 9D 00 D4 CA 10 FA A9 0F 8D 18 D4 60 60 AD ?? ?? D0 06 AD ?? ?? 8D ?? ?? AD ?? ?? F0 EF 48 20 ?? ?? 68 C9 ?? 90 01 60 8D ?? ?? 0A 0A 0A AA A9 0F 8D 18 D4 8D ?? ?? A0 00 8C ?? ?? 8C END
-CE ?? ?? D0 03 4C ?? ?? 20 ?? ?? 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? BD ?? ?? 10 03 20 ?? ?? BD ?? ?? 8D ?? ?? A9 ?? D0 ?? AND DE ?? ?? F0 ?? A9 ?? 29 04 F0 03 20 ?? ?? 20 END
+CE ?? ?? D0 03 4C ?? ?? 20 ?? ?? 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? BD ?? ?? 10 03 20 ?? ?? BD ?? ?? 8D ?? ?? A9 ?? D0 AND DE ?? ?? F0 ?? A9 ?? 29 04 F0 03 20 ?? ?? 20 END
 F0 0B DE ?? ?? 10 29 BD ?? ?? 9D ?? ?? BD ?? ?? F0 0F BD ?? ?? 18 7D ?? ?? 90 12 FE ?? ?? 4C ?? ?? BD ?? ?? 38 FD ?? ?? B0 03 DE ?? ?? 9D ?? ?? 60 END
 
 Twynn
@@ -1396,9 +1402,9 @@ Van_Styer_Digi
 06 D4 8D 0D D4 8D 14 D4 60 B9 00 END
 
 Vibrants/Laxity
-CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? AD ?? ?? 8D ?? ?? AND BD ?? ?? 8D ?? ?? BD ?? ?? 10 03 4C END
+CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? AD ?? ?? 8D AND BD ?? ?? 8D ?? ?? BD ?? ?? 10 03 4C END
 9D ?? ?? BD ?? ?? 48 4A 4A 4A 4A 48 18 69 01 9D ?? ?? 68 8D ?? ?? A9 02 9D ?? ?? 68 A8 END
-A9 1F 8D 18 D4 2C ?? ?? 30 ?? ?? ?? ?? ?? ?? ?? AND A2 17 A9 00 9D 00 D4 CA 10 F8 60 END
+A9 1F 8D 18 D4 2C ?? ?? 30 AND A2 17 A9 00 9D 00 D4 CA 10 F8 60 END
 C9 20 B0 11 29 1F 48 A9 01 9D ?? ?? 68 0A 0A 9D ?? ?? 4C ?? ?? 29 1F 48 A9 80 9D ?? ?? 68 0A 0A 9D ?? ?? 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? BC ?? ?? B1 ?? C9 ?? D0 END
 BD ?? ?? F0 ?? C9 01 D0 ?? BD ?? ?? D0 ?? AD ?? ?? D0 ?? A9 00 99 04 D4 99 05 D4 99 06 D4 END
 8D 16 D4 8D ?? ?? AD ?? ?? 29 0F 8D ?? ?? C8 B1 FB 48 29 10 4A 4A 4A 4A 8D ?? ?? 68 0A 0A 0A 0A 0D ?? ?? 1D ?? ?? 8D 17 D4 8D ?? ?? 4C ?? ?? AD ?? ?? 3D ?? ?? 8D 17 D4 8D ?? ?? A0 01 B1 FB AC END
@@ -1492,7 +1498,7 @@ A2 17 A9 00 9D 00 D4 CA 10 FA A9 21 8D 05 D4 8D 0C D4 8D 13 D4 A9 84 8D 06 D4 8D
 10 DD AD ?? ?? D0 05 A9 ?? 8D ?? ?? 60 AE ?? ?? A1 ?? C9 FF D0 56 F6 ?? D0 02 F6 ?? A1 ?? C9 FF D0 0A BD ?? ?? 95 ?? BD ?? ?? 95 ?? A1 ?? 0A 8D END
 
 ?Edge
-99 06 D4 AND 29 C0 0A 2A 2A A8 B9 ?? ?? AND 60 AND 09 01 99 04 D4 60 END
+99 06 D4 AND 29 C0 0A 2A 2A A8 B9 AND 60 AND 09 01 99 04 D4 60 END
 
 ?Howard_Boles
 A9 01 99 8C 85 A9 55 99 8F 85 88 10 F3 A5 02 18 END
@@ -1527,6 +1533,9 @@ C9 B0 D0 1B A5 FF 29 0F 9D END
 
 ?Russel_Lieblich_2
 BD ?? ?? 30 14 29 40 D0 0F A4 ?? A9 FF 99 END
+
+?Russel_Lieblich_3
+99 04 D4 68 C9 FF F0 ?? 29 ?? 9D END
 
 ?Jim_Simmons/Capcom
 99 00 D4 C8 CE ?? ?? D0 F4 CA CA 10 D5 60 END
