--- a/trunk/jsidplay2/src/applet/config/ConfigTexts.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts.properties
@@ -296,3 +296,18 @@ EMULATION_FORCE_STEREO_TUNE_TOOLTIP=A second SID is forced to be emulated
 
 EMULATION_STEREO_SID_MODEL_DESC=Use this SID model for stereo SID (default: use 1st SIDs model)
 EMULATION_STEREO_SID_MODEL_TOOLTIP=Use this SID model for stereo SID
+
+CURRENT_FAVORITE_DESC=Currently displayed favorites list.
+CURRENT_FAVORITE_TOOLTIP=Currently displayed favorites list
+
+FAVORITES_NAME_DESC=Name of the favorites list.
+FAVORITES_NAME_TOOLTIP=Name of the favorites list
+
+FILTER_NAME_DESC=Filter name
+FILTER_NAME_TOOLTIP=Filter name
+
+FILTER_FILTER8580_CURVE_POSITION_DESC=SID 8580 center frequency
+FILTER_FILTER8580_CURVE_POSITION_TOOLTIP=SID 8580 center frequency
+
+FILTER_FILTER6581_CURVE_POSITION_DESC=SID 6581 parameter to tweak the center frequency from 0 (light) to 1 (dark)
+FILTER_FILTER6581_CURVE_POSITION_TOOLTIP=SID 6581 parameter to tweak the center frequency
