--- a/trunk/jsidplay2/src/applet/soundsettings/SoundSettingsTexts.properties
+++ b/trunk/jsidplay2/src/applet/soundsettings/SoundSettingsTexts.properties
@@ -28,7 +28,7 @@ DOWNLOAD_R2=Download
 DOWNLOAD_URL_R5=Download URL (8580R5):
 DOWNLOAD_R5=Download
 
-OPTIONS=Options
+INFOS=Infos
 PLAYER=Player:
 SONG_SPEED=Song Speed:
 CALLS_PER_FRAME=calls/frame
