favorites extended to contain all tune infos, when added

--- a/jsidplay2/src/applet/config/ConfigTexts.properties
+++ b/jsidplay2/src/applet/config/ConfigTexts.properties
@@ -18,7 +18,10 @@ FILTERS=Filters
 FILTER=Filter
 FAVORITES=Favorites
 FAVORITE=Favorite
-FILENAME=Filename
+HVSC_ENTRIES=Entries
+HVSC_ENTRY=Entry
+STIL_ENTRIES=STIL Entries
+STIL_ENTRY=STIL Entry
 
 BROWSE=Browse...
 
