--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts.properties
@@ -44,3 +44,30 @@ STIL_AUTHOR=STIL Author
 STIL_TITLE=STIL Title
 STIL_ARTIST=STIL Artist
 STIL_COMMENT=STIL Comment
+
+TITLE=Title
+AUTHOR=Author
+RELEASED=Released
+FORMAT=Format
+PLAYER_ID=Player ID
+NO_OF_SONGS=No. of Songs
+START_SONG=Start song
+CLOCK_FREQ=Clock Freq.
+SPEED=Speed
+SID_MODEL_1=SID model 1
+SID_MODEL_2=SID model 2
+COMPATIBILITY=Compatibility
+TUNE_LENGTH=Tune length (s)
+AUDIO=Audio
+SID_CHIP_BASE_1=SID chip base 1
+SID_CHIP_BASE_2=SID chip base 2
+DRIVER_ADDRESS=Driver Address
+LOAD_ADDRESS=Load Address
+LOAD_LENGTH=Load Length
+INIT_ADDRESS=Init Address
+PLAYER_ADDRESS=Player Address
+FILE_DATE=File Date
+FILE_SIZE_KB=File size (kb)
+TUNE_SIZE_B=Tune size (b)
+RELOC_START_PAGE=Reloc. start page
+RELOC_NO_PAGES=Reloc. no. pages
