--- a/trunk/jsidplay2/src/applet/favorites/FavoritesTexts.properties
+++ b/trunk/jsidplay2/src/applet/favorites/FavoritesTexts.properties
@@ -40,6 +40,7 @@ SID_CHIP_BASE_1=SID chip base 1
 SID_CHIP_BASE_2=SID chip base 2
 DRIVER_ADDRESS=Driver Address
 LOAD_ADDRESS=Load Address
+LOAD_LENGTH=Load Length
 INIT_ADDRESS=Init Address
 PLAYER_ADDRESS=Player Address
 FILE_DATE=File Date
