--- a/trunk/jsidplay2/src/applet/collection/CollectionTexts.properties
+++ b/trunk/jsidplay2/src/applet/collection/CollectionTexts.properties
@@ -35,16 +35,8 @@ ADD_TO_A_NEW_PLAYLIST=Add to a new Playlist
 
 NEW_TAB=New Tab
 
-FILE_NAME=File Name
-FULL_PATH=Full Path
-
-STIL_GLB_COMMENT=STIL glb. Comment
-STIL_NAME=STIL Name
-STIL_AUTHOR=STIL Author
-STIL_TITLE=STIL Title
-STIL_ARTIST=STIL Artist
-STIL_COMMENT=STIL Comment
-
+NAME=File Name
+PATH=Full Path
 TITLE=Title
 AUTHOR=Author
 RELEASED=Released
@@ -71,3 +63,9 @@ FILE_SIZE_KB=File size (kb)
 TUNE_SIZE_B=Tune size (b)
 RELOC_START_PAGE=Reloc. start page
 RELOC_NO_PAGES=Reloc. no. pages
+STIL_GLB_COMMENT=STIL glb. Comment
+STIL_NAME=STIL Name
+STIL_AUTHOR=STIL Author
+STIL_TITLE=STIL Title
+STIL_ARTIST=STIL Artist
+STIL_COMMENT=STIL Comment
