JPA meta model added to remove string to field conversions in the the search function and the display of the tune infos

--- a/jsidplay2/src/applet/favorites/FavoritesTexts.properties
+++ b/jsidplay2/src/applet/favorites/FavoritesTexts.properties
@@ -21,30 +21,37 @@ REMOVE_FAVORITES=Remove Favorites
 OVERWRITE_EXISTING_FILE=Overwrite existing file %s ?: 
 OVERWRITE_FILE=Overwrite File
 
-PATH=File name
-TITLE=Title
-AUTHOR=Author
-RELEASED=Released
-FORMAT=Format
-PLAYER_ID=Player ID
-NO_OF_SONGS=No. of Songs
-START_SONG=Start song
-CLOCK_FREQ=Clock Freq.
-SPEED=Speed
-SID_MODEL_1=SID model 1
-SID_MODEL_2=SID model 2
-COMPATIBILITY=Compatibility
-TUNE_LENGTH=Tune length (s)
-AUDIO=Audio
-SID_CHIP_BASE_1=SID chip base 1
-SID_CHIP_BASE_2=SID chip base 2
-DRIVER_ADDRESS=Driver Address
-LOAD_ADDRESS=Load Address
-LOAD_LENGTH=Load Length
-INIT_ADDRESS=Init Address
-PLAYER_ADDRESS=Player Address
-FILE_DATE=File Date
-FILE_SIZE_KB=File size (kb)
-TUNE_SIZE_B=Tune size (b)
-RELOC_START_PAGE=Reloc. start page
-RELOC_NO_PAGES=Reloc. no. pages
+HVSCEntry.path=Full Path
+HVSCEntry.name=File Name
+HVSCEntry.title=Title
+HVSCEntry.author=Author
+HVSCEntry.released=Released
+HVSCEntry.format=Format
+HVSCEntry.playerId=Player ID
+HVSCEntry.noOfSongs=No. of Songs
+HVSCEntry.startSong=Start song
+HVSCEntry.clockFreq=Clock Freq.
+HVSCEntry.speed=Speed
+HVSCEntry.sidModel1=SID model 1
+HVSCEntry.sidModel2=SID model 2
+HVSCEntry.compatibility=Compatibility
+HVSCEntry.tuneLength=Tune length (s)
+HVSCEntry.audio=Audio
+HVSCEntry.sidChipBase1=SID chip base 1
+HVSCEntry.sidChipBase2=SID chip base 2
+HVSCEntry.driverAddress=Driver Address
+HVSCEntry.loadAddress=Load Address
+HVSCEntry.loadLength=Load Length
+HVSCEntry.initAddress=Init Address
+HVSCEntry.playerAddress=Player Address
+HVSCEntry.fileDate=File Date
+HVSCEntry.fileSizeKb=File size (kb)
+HVSCEntry.tuneSizeB=Tune size (b)
+HVSCEntry.relocStartPage=Reloc. start page
+HVSCEntry.relocNoPages=Reloc. no. pages
+HVSCEntry.stilGlbComment=STIL glb. Comment
+STIL.stilName=STIL Name
+STIL.stilAuthor=STIL Author
+STIL.stilTitle=STIL Title
+STIL.stilArtist=STIL Artist
+STIL.stilComment=STIL Comment
