--- a/trunk/jsidplay2/src/applet/favorites/FavoritesTexts.properties
+++ b/trunk/jsidplay2/src/applet/favorites/FavoritesTexts.properties
@@ -50,8 +50,8 @@ HVSCEntry.tuneSizeB=Tune size (b)
 HVSCEntry.relocStartPage=Reloc. start page
 HVSCEntry.relocNoPages=Reloc. no. pages
 HVSCEntry.stilGlbComment=STIL glb. Comment
-STIL.stilName=STIL Name
-STIL.stilAuthor=STIL Author
-STIL.stilTitle=STIL Title
-STIL.stilArtist=STIL Artist
-STIL.stilComment=STIL Comment
+StilEntry.stilName=STIL Name
+StilEntry.stilAuthor=STIL Author
+StilEntry.stilTitle=STIL Title
+StilEntry.stilArtist=STIL Artist
+StilEntry.stilComment=STIL Comment
