--- a/trunk/jsidplay2/src/applet/config/ConfigTexts.properties
+++ b/trunk/jsidplay2/src/applet/config/ConfigTexts.properties
@@ -18,8 +18,10 @@ FILTERS=Filters
 FILTER=Filter
 FAVORITES=Favorites
 FAVORITE=Favorite
-HVSC_ENTRIES=Entries
-HVSC_ENTRY=Entry
+FAVORITES_COLUMNS=Columns
+FAVORITE_COLUMN=Attribute
+HVSC_ENTRIES=Filenames
+HVSC_ENTRY=Filename
 STIL_ENTRIES=STIL Entries
 STIL_ENTRY=STIL Entry
 
@@ -302,6 +304,9 @@ CURRENT_FAVORITE_TOOLTIP=Currently displayed favorites list
 
 FAVORITES_NAME_DESC=Name of the favorites list.
 FAVORITES_NAME_TOOLTIP=Name of the favorites list
+
+FAVORITES_COLUMNS_COLUMN_PROPERTY_DESC=Attribute name of the column contents
+FAVORITES_COLUMNS_COLUMN_PROPERTY_TOOLTIP=Attribute name of the column contents
 
 FILTER_NAME_DESC=Filter name
 FILTER_NAME_TOOLTIP=Filter name
